--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "shixin-zheng/shixin-zheng.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "IMG_2363.png"
   name             : "郑仕欣"
   pronouns         : # example: "she/her"  
   bio              : "Postdoc Associate, Department of Mathematics"
